report fix